updated to keep up with latest enet and emscripten

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,4 @@
 EMCC=$(HOME)/Dev/emscripten/emcc
 
 test:
-	$(EMCC) test.c -lenet -L../libs -I../include -o index.js --pre-js ../js/udp-socket-extension.js
+	$(EMCC) test.c -lenet -L../libs -I../include -o index.js --pre-js ../js/udp-socket-extension.js -s ASM_JS=0
