moved source files to src/

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 EMCC=`which emcc`
 
 test:
-	$(EMCC) test.c -lenet -L../libs -I../include -o index.js --js-library ../js/library_enet_node_backend.js -s ASM_JS=0 -O2 -s LINKABLE=1
+	$(EMCC) ../src/test.c -lenet -L../libs -I../include -o index.js --js-library ../src/library_enet_node_backend.js -s ASM_JS=0 -O2 -s LINKABLE=1
 oldway:
-	$(EMCC) test.c -lenet -L../libs -I../include -o index.js --pre-js ../js/udp-socket-extension.js -s ASM_JS=0
+	$(EMCC) ../src/test.c -lenet -L../libs -I../include -o index.js --pre-js ../src/udp-socket-extension.js -s ASM_JS=0
