--- a/test/Makefile
+++ b/test/Makefile
@@ -4,3 +4,5 @@ test:
 	$(EMCC) ../src/test.c -lenet -L../libs -I../include -o index.js --js-library ../src/library_enet_node_backend.js -s ASM_JS=0 -O2 -s LINKABLE=1
 oldway:
 	$(EMCC) ../src/test.c -lenet -L../libs -I../include -o index.js --pre-js ../src/udp-socket-extension.js -s ASM_JS=0
+nodesockets:
+	$(EMCC) ../src/test-new.c -lenet -L../libs -I../include -o index-new.js --js-library ../src/library_node_sockets.js -O2
